--- a/tox.ini
+++ b/tox.ini
@@ -4,4 +4,5 @@ envlist = py27,py33,py34,py35,pypy
 changedir = {envtmpdir}
 deps=-r{toxinidir}/test-requirements.txt
 commands=
+    pyflakes {toxinidir}/graphjoiner {toxinidir}/tests
     pytest {toxinidir}/tests
