Use WHERE ... IN instead of JOIN and DISTINCT

--- a/tox.ini
+++ b/tox.ini
@@ -6,3 +6,5 @@ deps=-r{toxinidir}/test-requirements.txt
 commands=
     pyflakes {toxinidir}/graphjoiner {toxinidir}/tests
     pytest {toxinidir}/tests
+passenv =
+    TEST_POSTGRESQL_URL
